<resources>
    <string name="app_name">Smack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="sign_up_hint">Don\'t have an account?</string>
    <string name="user_create_button">Sign up here</string>
    <string name="user_av">Tap to generate user avatar</string>
    <string name="create_user_btn">Create user</string>
    <string name="background_color">Generate background color</string>
    <string name="logout">Logout</string>
</resources>
