<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.LoginActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/login_email_text" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="email"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/login_password_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_email_text" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="password"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/log_act_login_btn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_password_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:background="@color/colorPrimary" android:textColor="@android:color/white"
            android:onClick="onLogActLoginButtonClicked"/>
    <TextView
            android:text="@string/sign_up_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_login_screen" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/log_act_login_btn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/user_create_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/user_create_btn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_login_screen" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:background="@color/colorPrimary"
            android:textColor="@android:color/white" android:onClick="onUserCreateButtonClicked"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_spinner"
            app:layout_constraintBottom_toTopOf="@+id/text_login_screen" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:indeterminate="false"/>
    <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/crashBtn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/user_create_btn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:onClick="onCrashClicked" android:visibility="invisible"/>
</android.support.constraint.ConstraintLayout>